# haskell-pattern-matching

./: README.md  makefile  patterns.cabal  stack.yaml
app/: Main.hs
build_data/: BaseDataTypes.hs
data/: PatternsWithParams.hs  Variables.hs  Variables.hs.expected  redundant.hs  redundant.hs.expected
data/exact/: Abs.hs  Abs.hs.expected  BoolEs.hs  BoolEs.hs.expected  BoolInaccessible.hs  BoolInaccessible.hs.expected  BooleanGuards.hs  BooleanGuards.hs.expected  Bools.hs  Bools.hs.expected  ComplicatedInts.hs  ComplicatedInts.hs.expected  ConcreteTuples.hs  ConcreteTuples.hs.expected  EvalBool.hs  EvalBool.hs.expected  FuncGuard.hs  FuncGuard.hs.expected  Identity.hs  Identity.hs.expected  IntOps.hs  IntOps.hs.expected  Integers.hs  Integers.hs.expected  Ints.hs  Ints.hs.expected  List3Unzip.hs  List3Unzip.hs.expected  ListUnzip.hs  ListUnzip.hs.expected  Lists.hs  Lists.hs.expected  Lists2.hs  Lists2.hs.expected  ListsIncomplete.hs  ListsIncomplete.hs.expected  MutipleTranslatedGuards.hs  MutipleTranslatedGuards.hs.expected  PartialPatternWithVariable.hs  PartialPatternWithVariable.hs.expected  (+46 more)
data/shouldNotParse/: duplicateSignature.hs  infixdataconstructor.hs  missingImplementation.hs  recordDataConstructor.hs
data/shouldParse/: Tree.hs  bools.hs
src/: ClauseProcessing.hs  ClauseProcessing.hs.orig  DataDefs.hs  DataDefs.hs.orig  Evaluatedness.hs  Gatherer.hs  Gatherer.hs.orig  Lib.hs  Lib.hs.orig  OptParse.hs  Oracle.hs  Oracle.hs.orig  TH.hs  Types.hs  Util.hs
src/OptParse/: Types.hs
src/Oracle/: SBVQueries.hs
test/: ClauseProcessingSpec.hs  GathererSpec.hs  LibSpec.hs  OracleSpec.hs  Spec.hs  TestUtils.hs
test/Oracle/: SBVQueriesSpec.hs  TestUtils.hs
