name:                patterns
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/patterns#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , haskell-src-exts       >= 1.17  && < 1.18
                     , aeson-pretty           >= 0.7   && < 0.8
                     , aeson                  >= 0.11  && < 0.12
                     , bytestring             >= 0.10  && < 0.11
  default-language:    Haskell2010

executable patterns
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , patterns
  default-language:    Haskell2010

test-suite patterns-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MainTest.hs
  other-modules:       LibSpec
  build-depends:       base
                     , patterns
                     , hspec                  >= 2.2   && < 2.3
                     , hspec-core             >= 2.2   && < 2.3
                     , HUnit                  >= 1.3   && < 1.4
                     , QuickCheck             >= 2.8   && < 2.9
                     , directory              >= 1.2.5 && < 1.3
                     , filepath               >= 1.4   && < 1.5
                     , haskell-src-exts       >= 1.17  && < 1.18
                     , aeson-pretty           >= 0.7   && < 0.8
                     , aeson                  >= 0.11  && < 0.12
                     , bytestring             >= 0.10  && < 0.11

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/patterns
