name:                patterns
version:             0.1.0.0
synopsis:            Pattern matching program analysis
description:         Please see README.md
homepage:            https://github.com/githubuser/patterns#readme
license:             BSD3
license-file:        LICENSE
author:              Pavel Kalvoda and Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
copyright:           2016 Pavel Kalvoda and Tom Sydney Kerckhove
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -package ghc
  exposed-modules:     Lib
                     , Util
                     , ClauseProcessing
                     , DataDefs
                     , OptParse
                     , OptParse.Types
                     , Types
                     , Gatherer
                     , TH
                     , Oracle
                     , Oracle.SBVQueries
  build-depends:       base                   >= 4.9   && < 5
                     , containers             >= 0.5   && < 0.6
                     , haskell-src-exts       >= 1.17  && < 1.18
                     , extra                  >= 1.4   && < 1.5
                     , ghc                    >= 8.0   && < 8.1
                     , aeson-pretty           >= 0.7   && < 0.8
                     , aeson                  >= 0.11  && < 0.12
                     , bytestring             >= 0.10  && < 0.11
                     , sbv                    >= 5.11  && < 5.13
                     , optparse-applicative   >= 0.12  && < 0.13
                     , mtl                    >= 2.2   && < 2.3
                     , transformers           >= 0.5   && < 0.6
                     , template-haskell       >= 2.11  && < 2.12
                     , pretty-show            >= 1.6   && < 1.7
  default-language:    Haskell2010

executable patterns
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -package ghc
  build-depends:       base
                     , patterns
  default-language:    Haskell2010

test-suite patterns-test
  type:                exitcode-stdio-1.0
  ghc-options:         -package ghc
  hs-source-dirs:      test
  main-is:             MainTest.hs
  other-modules:       LibSpec
                       GathererSpec
                       OracleSpec
                       Oracle.SBVQueriesSpec
                       TestUtils
  build-depends:       base
                     , patterns
                     , hspec                  >= 2.2   && < 2.3
                     , hspec-core             >= 2.2   && < 2.3
                     , HUnit                  >= 1.3   && < 1.4
                     , QuickCheck             >= 2.8   && < 2.9
                     , sbv                    >= 5.12  && < 5.13
                     , containers             >= 0.5   && < 0.6
                     , directory              >= 1.2.5 && < 1.3
                     , filepath               >= 1.4   && < 1.5
                     , haskell-src-exts       >= 1.17  && < 1.18
                     , aeson-pretty           >= 0.7   && < 0.8
                     , mtl                    >= 2.2   && < 2.3
                     , aeson                  >= 0.11  && < 0.12
                     , bytestring             >= 0.10  && < 0.11

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/patterns
